--- a/requirements.txt
+++ b/requirements.txt
@@ -4,18 +4,26 @@ aiohttp==3.9.1
 aiosignal==1.3.1
 aiosqlite==0.19.0
 annotated-types==0.6.0
+anyio==4.8.0
 async-timeout==4.0.3
 asyncpg==0.29.0
 attrs==23.2.0
 certifi==2023.11.17
+click==8.1.8
+colorama==0.4.6
+fastapi==0.115.7
 frozenlist==1.4.1
 greenlet==3.0.3
+h11==0.14.0
 idna==3.6
 magic-filter==1.0.12
 multidict==6.0.4
 pydantic==2.4.1
 pydantic_core==2.10.1
 python-dotenv==1.0.0
+sniffio==1.3.1
 SQLAlchemy==2.0.25
+starlette==0.45.3
 typing_extensions==4.12.2
+uvicorn==0.34.0
 yarl==1.9.4
